--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,42 @@
  * @Author: schwarze_falke
  * @Date:   2018-10-18T20:20:15-05:00
  * @Last modified by:   schwarze_falke
- * @Last modified time: 2018-10-18T20:26:14-05:00
+ * @Last modified time: 2018-10-18T21:07:39-05:00
  */
+body { background: #9cb8b3; }
+
+h1 {
+   font: 600 1.5em/1 'Raleway', sans-serif;
+   color: rgba(0,0,0,.5);
+   text-align: center;
+   text-transform: uppercase;
+   letter-spacing: .5em;
+   position: absolute;
+   top: 5%;
+   width: 100%;
+}
+
+span, span:after {
+   font-weight: 900;
+   color: #efedce;
+   white-space: nowrap;
+   display: inline-block;
+   position: relative;
+   letter-spacing: .1em;
+   padding: .2em 0 .25em 0;
+}
+
+span {
+   font-size: 4em;
+   z-index: 100;
+   text-shadow: .04em .04em 0 #9cb8b3;
+}
+
 p {
-   font-family: Arial, Helvetica, sans-serif;
+   color: #626258;
+   font: 600 1.5em/1 'Raleway', sans-serif;
+   text-align: center;
+   padding: 12em 0 .25em 0;
 }
 
 input[type=text], select {
@@ -19,9 +51,10 @@ input[type=text], select {
 }
 
 input[type=submit] {
-   width: 10%;
-   background-color: #4CAF50;
-   color: white;
+   font: 600 1.5em/1 'Raleway', sans-serif;
+   width: 20%;
+   background-color: #9bf7e7;
+   color: #626258;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
@@ -30,7 +63,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-   background-color: #45a049;
+   background-color: #74ffe7;
 }
 
 div {
