--- a/css/main.scss
+++ b/css/main.scss
@@ -4,9 +4,14 @@ $colors: (
   accent: #816c61,
   background: #131b23
 );
-
+$desktop: 950px;
 @function color($color-name) {
   @return map-get($colors, $color-name);
+}
+@mixin desktop {
+  @media (min-width: #{$desktop}) {
+    @content;
+  }
 }
 
 html {
@@ -20,6 +25,21 @@ body {
   font-family: Cinzel, serif;
   font-size: 1.5em;
   letter-spacing: 0.4em;
+  overflow: hidden;
+  .background {
+    display: none;
+    @include desktop {
+      display: block;
+      position: absolute;
+      z-index: -1;
+      top: -50%;
+      left: 0;
+      width: 80%;
+      height: 200%;
+      background-color: color(background);
+      border-radius: 0 50% 50% 0;
+    }
+  }
   form {
     height: 100%;
     width: 100%;
@@ -28,6 +48,11 @@ body {
     justify-content: space-evenly;
     align-items: center;
     margin: 0;
+    @include desktop {
+      display: grid;
+      grid-template-columns: 80% auto;
+      grid-template-rows: 1fr 1fr;
+    }
     #messageWrapper,
     #nameWrapper {
       display: flex;
@@ -41,6 +66,17 @@ body {
       background-color: color(background);
       box-shadow: 0 0 6px color(background);
       transition: all 0.3s ease;
+      @include desktop {
+        width: 500px;
+        height: auto;
+        cursor: auto;
+        background-color: unset;
+        box-shadow: unset;
+        border-radius: 0;
+        display: block;
+        margin: auto;
+        font-size: 2em;
+      }
       input {
         margin-top: 10px;
         display: none;
@@ -52,9 +88,15 @@ body {
         padding: 10px;
         transition: background-color 0.3s ease;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        @include desktop {
+          display: block;
+        }
       }
       input:focus {
         background-color: color(primary-light);
+      }
+      input#message {
+        width: 200px;
       }
     }
     #messageWrapper.active,
@@ -77,6 +119,14 @@ body {
       border-radius: 5px;
       border: none;
       padding: 10px 30px;
+      @include desktop {
+        grid-column: 2;
+        grid-row: 1 / 3;
+        span {
+          writing-mode: vertical-rl;
+          text-orientation: upright;
+        }
+      }
     }
     button[disabled].submit::before {
       position: absolute;
@@ -87,6 +137,10 @@ body {
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
+      @include desktop {
+        width: 1px;
+        height: 90%;
+      }
     }
     button.submit::before {
       width: 0%;
